--- a/zigbee2mqtt/config.json
+++ b/zigbee2mqtt/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "Zigbee2MQTT",
+  "name": "Zigbee2MQTT-1",
   "version": "2.6.2-1",
   "slug": "zigbee2mqtt",
   "description": "Use your ZigBee devices without the vendor's bridge or gateway",
@@ -51,7 +51,7 @@
     "8099/tcp": "Frontend tcp-listen port"
   },
   "options": {
-    "data_path": "/config/zigbee2mqtt",
+    "data_path": "/config/zigbee2mqtt_1",
     "socat": {
       "enabled": false,
       "master": "pty,raw,echo=0,link=/tmp/ttyZ2M,mode=777",
@@ -59,7 +59,9 @@
       "options": "-d -d",
       "log": false
     },
-    "mqtt": {},
+    "mqtt": {
+      "base_topic": "zigbee2mqtt-1"
+    },
     "serial": {}
   },
   "schema": {
